--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ video[poster]{
  footer , .footerE{
     grid-area:footer;
     color:white;
-    background-color:#3131aba5;
+    background-color:#3131abe9;
     text-align:center;
     margin-top:4%;
   }
@@ -923,7 +923,50 @@ form .div1{
 form input {
   width:100%;
 }
+.containerRES main p {
+  font-size: 1.25em;
+}
+.res-paragraph {
+  grid-area: res-paragraph;
+  background: #3131abe9;
+  border-radius: 4px;
+  padding:3%;
+}
+.library {
+  grid-area: library;
+  background: #3131abe9;
+  border-radius: 4px;
+  padding:1% 1% 1% 3%;
+}
+.planning-form {
+  grid-area: planning-form;
+  background: #3131abe9;
+  border-radius: 4px;
+  padding:1% 1% 1% 3%;
+}
+.containerRES footer {
+  margin-top:8%;
+}
+.containerREV main {
+  margin-top:30vw;
+}
+.review {
+  background: #3131abe9;
+  margin: 1% 0 1% 0;
+  padding:1%;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 250ms ease-in;
+}
 
+.review.appear{
+  opacity: 1;
+  z-index:999;
+  
+}
+.review p {
+  font-size: 1.15em;
+}
  /* .package-title{
   display:flex;
   align-items: center;
@@ -1031,6 +1074,16 @@ form input {
   grid-template-areas: 
   "formhead formhead"
   "leftul rightul";
+}
+.nestedgridRES {
+  display: grid;
+  
+  grid-template-columns:auto;
+  grid-gap: 3%;
+  grid-template-areas: 
+  "res-paragraph"
+  "library"
+  "planning-form";
 }
 .container1{ /*for home*/
    display:grid;
@@ -1162,6 +1215,13 @@ form .div1{
     "formhead formhead"
     "leftul rightul";
   }
+  .nestedgridRES {
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    grid-template-areas: 
+    "res-paragraph library"
+    "res-paragraph planning-form";
+  }
    .container1{ /*for home*/
       display:grid;
        grid-template-columns: auto; 
@@ -1290,6 +1350,13 @@ form .div1{
     grid-template-areas: 
     "formhead formhead"
     "leftul rightul";
+  }
+  .nestedgridRES {
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    grid-template-areas: 
+    "res-paragraph library"
+    "res-paragraph planning-form";
   }
     .container1{ /*for home page*/
         display:grid;
